Adding some logging for Serenity.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1687 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -40,4 +40,9 @@ log4j.category.bitronix.tm.twopc=ERROR
 log4j.category.ikube=INFO
 log4j.category.ikube.toolkit=INFO
 log4j.category.ikube.action.rule=INFO
-log4j.category.ikube.action.index.handler.filesystem=DEBUG
+log4j.category.ikube.action.index.handler.filesystem=INFO
+
+log4j.category.com.ikokoon=WARN
+# log4j.category.com.ikokoon.toolkit=WARN
+# log4j.category.com.ikokoon.serenity.persistence=WARN
+# log4j.category.com.ikokoon.serenity.process=WARN
