--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -42,7 +42,7 @@ log4j.category.ikube.toolkit=INFO
 log4j.category.ikube.action.rule=INFO
 log4j.category.ikube.action.index.handler.filesystem=INFO
 
-log4j.category.com.ikokoon=WARN
+log4j.category.com.ikokoon=DEBUG
 # log4j.category.com.ikokoon.toolkit=WARN
 # log4j.category.com.ikokoon.serenity.persistence=WARN
 # log4j.category.com.ikokoon.serenity.process=WARN
