--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -45,4 +45,4 @@ log4j.category.ikube.action.index.handler.filesystem=INFO
 log4j.category.com.ikokoon.serenity=WARN
 log4j.category.com.ikokoon.toolkit=WARN
 log4j.category.com.ikokoon.serenity.persistence=WARN
-log4j.category.com.ikokoon.serenity.process=DEBUG
+log4j.category.com.ikokoon.serenity.process=WARN
