--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -88,8 +88,8 @@ minimum.free.space.for.notifications=10000
 h2.jdbc.userid=sa
 h2.jdbc.password=
 h2.jdbc.driver=org.h2.Driver
-h2.jdbc.url=jdbc:h2:file:ikube/ikube
-
+h2.jdbc.url=jdbc:h2:tcp://192.168.1.10/ikube
+# h2.jdbc.url=jdbc:h2:file:ikube/ikube
 #h2.jdbc.url=jdbc:h2:mem:ikube
 #jdbc:h2:tcp://localhost/~/ikube
 
