--- a/code/war/src/main/webapp/WEB-INF/web.xml
+++ b/code/war/src/main/webapp/WEB-INF/web.xml
@@ -70,9 +70,14 @@
 	</servlet-mapping>
 
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>/index.jsp</welcome-file>
+		<welcome-file>/index.html</welcome-file>
 	</welcome-file-list>
+
+	<!-- <error-page>
+		<error-code>404</error-code>
+		<location>/system/dash.jsp</location>
+	</error-page> -->
 
 	<jsp-config>
 		<taglib>
