--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -46,3 +46,4 @@ log4j.category.com.ikokoon.serenity=WARN
 log4j.category.com.ikokoon.toolkit=WARN
 log4j.category.com.ikokoon.serenity.persistence=WARN
 log4j.category.com.ikokoon.serenity.process=WARN
+log4j.category.com.ikokoon.serenity.persistence=DEBUG
