--- a/code/site/src/main/webapp/WEB-INF/web.xml
+++ b/code/site/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,11 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring.xml</param-value>
+		<param-value>
+			/WEB-INF/spring.xml,
+			/WEB-INF/spring/spring-security.xml,
+			/WEB-INF/spring/spring-users.xml
+		</param-value>
 	</context-param>
 
 	<listener>
