--- a/code/war/src/main/webapp/WEB-INF/web.xml
+++ b/code/war/src/main/webapp/WEB-INF/web.xml
@@ -74,10 +74,10 @@
 		<welcome-file>/index.html</welcome-file>
 	</welcome-file-list>
 
-	<!-- <error-page>
+	<error-page>
 		<error-code>404</error-code>
-		<location>/system/dash.jsp</location>
-	</error-page> -->
+		<location>/system/dash.html</location>
+	</error-page>
 
 	<jsp-config>
 		<taglib>
