--- a/code/libs/src/main/resources/indexes/production/spring.properties
+++ b/code/libs/src/main/resources/indexes/production/spring.properties
@@ -2,3 +2,6 @@
 db2.jdbc.userid=db2
 db2.jdbc.password=Bp0st2013
 db2.jdbc.url=jdbc:db2://81.95.118.139:50000/icube
+
+# The maximum age of the GeoSpatial index
+max.age.geospatial=60000
