--- a/code/libs/src/main/resources/indexes/production/spring.properties
+++ b/code/libs/src/main/resources/indexes/production/spring.properties
@@ -1,7 +1,7 @@
 # The DB2 database credentials
-db2.jdbc.userid=db2
-db2.jdbc.password=Bp0st2013
-db2.jdbc.url=jdbc:db2://81.95.118.139:50000/icube
+db2.jdbc.userid=ubuntu
+db2.jdbc.password=Caherl1ne
+db2.jdbc.url=jdbc:db2://ikube.be:50000/ikube
 
 # The maximum age of the GeoSpatial index
 max.age.geospatial=60000
