--- a/code/libs/src/main/resources/indexes/system/spring.properties
+++ b/code/libs/src/main/resources/indexes/system/spring.properties
@@ -1,14 +1,9 @@
-# The DB2 database credentials
-db2.jdbc.userid=db2
-db2.jdbc.password=Bp0st2013
-db2.jdbc.url=jdbc:db2://81.95.118.139:50000/icube
-
 # The Oracle database credentials
 oracle.jdbc.userid=oracle
-oracle.jdbc.password=Bp0st2013
-oracle.jdbc.url=jdbc:oracle:thin:@//81.95.118.139:1521/XE
+oracle.jdbc.password=Caherl1ne
+oracle.jdbc.url=jdbc:oracle:thin:@//ikube.be:1521/XE
 
 # The Postgres database credentials
 postgres.jdbc.userid=postgres
-postgres.jdbc.password=Bp0st2013
-postgres.jdbc.url=jdbc:postgresql://81.95.118.139:5432/ikube
+postgres.jdbc.password=Caherl1ne
+postgres.jdbc.url=jdbc:postgresql://ikube.be:5432/ikube
