--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -160,6 +160,12 @@
 			<artifactId>ant</artifactId>
 			<version>1.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>mockit</groupId>
+			<artifactId>jmockit</artifactId>
+			<version>0.999</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 
 </project>
