--- a/code/libs/src/main/resources/indexes/system/spring.properties
+++ b/code/libs/src/main/resources/indexes/system/spring.properties
@@ -7,3 +7,8 @@ oracle.jdbc.url=jdbc:oracle:thin:@//ikube.be:1521/XE
 postgres.jdbc.userid=postgres
 postgres.jdbc.password=Caherl1ne
 postgres.jdbc.url=jdbc:postgresql://ikube.be:5432/ikube
+
+# The H geo database credentials
+h2.geo.jdbc.userid=sa
+h2.geo.jdbc.password=
+h2.geo.jdbc.url=jdbc:h2:tcp://ikube.be:9082/ikube
