--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -90,6 +90,9 @@
 								<copy todir="ikube/production" failonerror="true">
 									<fileset dir="../libs/src/main/resources/indexes/production" />
 								</copy>
+								<copy todir="ikube/analytics" failonerror="true">
+									<fileset dir="../libs/src/main/resources/analytics" />
+								</copy>
 							</target>
 						</configuration>
 						<goals>
