--- a/code/war/src/main/webapp/WEB-INF/web.xml
+++ b/code/war/src/main/webapp/WEB-INF/web.xml
@@ -52,6 +52,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>springDispatcherServlet</servlet-name>
+		<!-- <url-pattern>/*</url-pattern> -->
 		<url-pattern>*.html</url-pattern>
 	</servlet-mapping>
 
