--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube</artifactId>
 	<packaging>pom</packaging>
-	<version>4.4.0</version>
+	<version>4.4.0-SNAPSHOT</version>
 
 	<scm>
 		<url>https://ikube.googlecode.com/svn/trunk</url>
