--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -84,7 +84,7 @@
 								<copy todir="ikube" failonerror="true">
 									<fileset dir="../libs/src/main/resources/ikube" />
 								</copy>
-								<copy todir="ikube/integration" failonerror="true">
+								<!-- <copy todir="ikube/integration" failonerror="true">
 									<fileset dir="../libs/src/main/resources/indexes/integration" />
 								</copy>
 								<copy todir="ikube/production" failonerror="true">
@@ -92,7 +92,7 @@
 								</copy>
 								<copy todir="ikube/analytics" failonerror="true">
 									<fileset dir="../libs/src/main/resources/analytics" />
-								</copy>
+								</copy> -->
 							</target>
 						</configuration>
 						<goals>
