--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 
 		<war.base.root>code/war/target/ikube</war.base.root>
 		<postgresql.driver.version>9.1-901-1.jdbc4</postgresql.driver.version>
+		<!-- <jetty.version>6.1.25</jetty.version> -->
 		<jetty.version>6.1.11</jetty.version>
 		
 		<!-- Was 3.6.1 at 20.03.12 -->
@@ -903,7 +904,7 @@
 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast-all</artifactId>
-			<version>2.1.2</version>
+			<version>3.1.1</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
