--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -84,9 +84,9 @@
 								<copy todir="ikube" failonerror="true">
 									<fileset dir="../libs/src/main/resources/ikube" />
 								</copy>
-								<copy todir="ikube/integration" failonerror="true">
+								<!-- <copy todir="ikube/integration" failonerror="true">
 									<fileset dir="../libs/src/main/resources/indexes/integration" />
-								</copy>
+								</copy> -->
 								<copy todir="ikube/production" failonerror="true">
 									<fileset dir="../libs/src/main/resources/indexes/production" />
 								</copy>
