--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -99,6 +99,12 @@
 								<copy todir="../../ikube/integration" failonerror="true">
 									<fileset dir="../libs/src/main/resources/indexes/integration" />
 								</copy>
+								<copy todir="ikube/twitter" failonerror="true">
+									<fileset dir="../libs/src/main/resources/indexes/twitter" />
+								</copy>
+								<copy todir="../../ikube/twitter" failonerror="true">
+									<fileset dir="../libs/src/main/resources/indexes/twitter" />
+								</copy>
 								<copy todir="ikube/analytics" failonerror="true">
 									<fileset dir="../libs/src/main/resources/analytics" />
 								</copy>
