--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -87,7 +87,7 @@
 								<copy todir="../../ikube" failonerror="true">
 									<fileset dir="../libs/src/main/resources/ikube" />
 								</copy>
-								<copy todir="ikube/production" failonerror="true">
+								<!-- <copy todir="ikube/production" failonerror="true">
 									<fileset dir="../libs/src/main/resources/indexes/production" />
 								</copy>
 								<copy todir="../../ikube/production" failonerror="true">
@@ -98,7 +98,7 @@
 								</copy>
 								<copy todir="../../ikube/integration" failonerror="true">
 									<fileset dir="../libs/src/main/resources/indexes/integration" />
-								</copy>
+								</copy> -->
 								<copy todir="ikube/twitter" failonerror="true">
 									<fileset dir="../libs/src/main/resources/indexes/twitter" />
 								</copy>
