--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -87,7 +87,7 @@
 								<copy todir="../../ikube" failonerror="true">
 									<fileset dir="../libs/src/main/resources/ikube" />
 								</copy>
-								<!-- <copy todir="ikube/production" failonerror="true">
+								<copy todir="ikube/production" failonerror="true">
 									<fileset dir="../libs/src/main/resources/indexes/production" />
 								</copy>
 								<copy todir="../../ikube/production" failonerror="true">
@@ -98,12 +98,6 @@
 								</copy>
 								<copy todir="../../ikube/integration" failonerror="true">
 									<fileset dir="../libs/src/main/resources/indexes/integration" />
-								</copy> -->
-								<copy todir="ikube/twitter" failonerror="true">
-									<fileset dir="../libs/src/main/resources/indexes/twitter" />
-								</copy>
-								<copy todir="../../ikube/twitter" failonerror="true">
-									<fileset dir="../libs/src/main/resources/indexes/twitter" />
 								</copy>
 								<copy todir="ikube/analytics" failonerror="true">
 									<fileset dir="../libs/src/main/resources/analytics" />
@@ -139,7 +133,7 @@
 					</scanTargets>
 					<connectors>
 						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-							<port>8080</port>
+							<port>9090</port>
 							<maxIdleTime>60000</maxIdleTime>
 						</connector>
 					</connectors>
