--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -97,7 +97,7 @@
 				<executions>
 					<execution>
 						<id>start-jetty</id>
-						<phase>pre-integration-test</phase>
+						<phase>test</phase>
 						<goals>
 							<goal>run</goal>
 						</goals>
@@ -107,7 +107,7 @@
 					</execution>
 					<execution>
 						<id>stop-jetty</id>
-						<phase>post-integration-test</phase>
+						<phase>install</phase>
 						<goals>
 							<goal>stop</goal>
 						</goals>
