--- a/code/com/pom.xml
+++ b/code/com/pom.xml
@@ -32,6 +32,80 @@
 					<argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters} -XX:-UseSplitVerifier</argLine>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>copy-configuration</id>
+						<phase>compile</phase>
+						<configuration>
+							<target>
+								<echo message="Base directory : ${basedir}, ">Base directory : ${basedir}</echo>
+								<copy todir="ikube" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/ikube" />
+								</copy>
+								<copy todir="../core/ikube" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/ikube" />
+								</copy>
+								<copy todir="../war/ikube" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/ikube" />
+								</copy>
+								<copy todir="../../ikube" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/ikube" />
+								</copy>
+								
+								<copy todir="ikube/production" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/indexes/production" />
+								</copy>
+								<copy todir="../core/ikube/production" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/indexes/production" />
+								</copy>
+								<copy todir="../war/ikube/production" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/indexes/production" />
+								</copy>
+								<copy todir="../../ikube/production" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/indexes/production" />
+								</copy>
+								
+								<copy todir="ikube/integration" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/indexes/integration" />
+								</copy>
+								<copy todir="../core/ikube/integration" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/indexes/integration" />
+								</copy>
+								<copy todir="../war/ikube/integration" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/indexes/integration" />
+								</copy>
+								<copy todir="../../ikube/integration" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/indexes/integration" />
+								</copy>
+								
+								<copy todir="ikube/analytics" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/analytics" />
+								</copy>
+								<copy todir="../core/ikube/analytics" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/analytics" />
+								</copy>
+								<copy todir="../war/ikube/analytics" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/analytics" />
+								</copy>
+								<copy todir="../../ikube/analytics" failonerror="true" verbose="false">
+									<fileset dir="../libs/src/main/resources/analytics" />
+								</copy>
+								
+								<!-- <copy todir="ikube/twitter" failonerror="true">
+									<fileset dir="../libs/src/main/resources/indexes/twitter" />
+								</copy> -->
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
