--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,8 @@
 				<version>2.7.1</version>
 				<configuration>
 					<forkMode>once</forkMode>
+					<!-- Equivalent to -fae on the command line aparently. -->
+					<testFailureIgnore>true</testFailureIgnore>
 					<excludes>
 						<exclude>**/*Integration*.java</exclude>
 					</excludes>
