Upgraded to Lucene 4.6.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1831 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -56,6 +56,7 @@ language.word.lists.directory.index=./ikube/common/languages/index
 searcher.web.service.url=http://81.95.118.139/ikube/service/search/multi/spatial
 
 # The start and end tier of the geohash
+max.geohash.levels=11
 start.tier=10
 end.tier=20
 
