--- a/code/com/pom.xml
+++ b/code/com/pom.xml
@@ -56,7 +56,7 @@
 									<fileset dir="../libs/src/main/resources/ikube" />
 								</copy>
 								
-								<copy todir="ikube/production" failonerror="true" verbose="false">
+								<!-- <copy todir="ikube/production" failonerror="true" verbose="false">
 									<fileset dir="../libs/src/main/resources/indexes/production" />
 								</copy>
 								<copy todir="../core/ikube/production" failonerror="true" verbose="false">
@@ -67,7 +67,7 @@
 								</copy>
 								<copy todir="../../ikube/production" failonerror="true" verbose="false">
 									<fileset dir="../libs/src/main/resources/indexes/production" />
-								</copy>
+								</copy> -->
 								
 								<!-- <copy todir="ikube/integration" failonerror="true" verbose="false">
 									<fileset dir="../libs/src/main/resources/indexes/integration" />
