Fixing the geospatial logic.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1834 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -1119,13 +1119,13 @@
             <type>jar</type>
             <scope>compile</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-spatial</artifactId>
             <version>${lucene.version}</version>
             <type>jar</type>
             <scope>compile</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-queries</artifactId>
