--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -247,6 +247,12 @@
 			<version>2.2.2</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-template</artifactId>
+			<version>2.2.0</version>
+			<scope>compile</scope>
+		</dependency>
 		<!-- <dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>maven-jetty-plugin</artifactId>
