--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -18,7 +18,7 @@
 	</parent>
 	
 	<properties>
-		<phase>deploy</phase>
+		<phase>install</phase>
 		<packaging>jar</packaging>
 		<generate-pom>true</generate-pom>
 		<repository-id>ikube</repository-id>
@@ -33,7 +33,7 @@
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.7</version>
 				<executions>
-					<execution>
+					<!--<execution>
 						<id>install-db2-driver</id>
 						<goals>
 							<goal>deploy-file</goal>
@@ -385,6 +385,23 @@
 							<artifactId>squiggle</artifactId>
 							<version>1.4.0</version>
 							<file>tools/squiggle-1.4.0.jar</file>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
+						</configuration>
+					</execution>-->
+					<execution>
+						<id>install-cluster-gvm</id>
+						<goals>
+							<goal>deploy-file</goal>
+						</goals>
+						<phase>${phase}</phase>
+						<configuration>
+							<groupId>tomgibara</groupId>
+							<artifactId>cluster-gvm</artifactId>
+							<version>1.0</version>
+							<file>tools/cluster-gvm-1.0.jar</file>
 							<packaging>${packaging}</packaging>
 							<generatePom>${generate-pom}</generatePom>
 							<repositoryId>${repository-id}</repositoryId>
