--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -253,12 +253,12 @@
 			<version>2.2.0</version>
 			<scope>compile</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.mortbay.jetty</groupId>
-			<artifactId>maven-jetty-plugin</artifactId>
-			<version>7.0.0.pre5</version>
-			<type>pom</type>
-		</dependency> -->
-	</dependencies>
+        <dependency>
+            <groupId>tomgibara</groupId>
+            <artifactId>cluster-gvm</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
