--- a/code/com/pom.xml
+++ b/code/com/pom.xml
@@ -42,7 +42,7 @@
 						<phase>compile</phase>
 						<configuration>
 							<target>
-								<!--<echo message="Base directory : ${basedir}, ">Base directory : ${basedir}</echo>
+								<echo message="Base directory : ${basedir}, ">Base directory : ${basedir}</echo>
 								<copy todir="ikube" failonerror="true" verbose="false">
 									<fileset dir="../libs/src/main/resources/ikube" />
 								</copy>
@@ -93,11 +93,11 @@
 								</copy>
 								<copy todir="../../ikube/analytics" failonerror="true" verbose="false">
 									<fileset dir="../libs/src/main/resources/analytics" />
-								</copy>-->
+								</copy>
 								
-								<!-- <copy todir="ikube/twitter" failonerror="true">
+								 <copy todir="ikube/twitter" failonerror="true">
 									<fileset dir="../libs/src/main/resources/indexes/twitter" />
-								</copy> -->
+								</copy>
 							</target>
 						</configuration>
 						<goals>
