--- a/pom.xml
+++ b/pom.xml
@@ -58,15 +58,6 @@
 		<lucene.spellchecker.version>3.6.2</lucene.spellchecker.version>
 	</properties>
 
-	<modules>
-		<module>code/com</module>
-		<module>code/core</module>
-		<module>code/war</module>
-		<!-- <module>code/site</module> -->
-		<!-- <module>code/libs</module>
-		<module>code/tool</module> -->
-	</modules>
-
 	<build>
 		<resources>
 			<resource>
@@ -174,9 +165,9 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
-			<!-- 
-				This plugin reads the properties from the buid.properties file and makes them all available 
-				to the rest of the Maven build process. 
+			<!--
+				This plugin reads the properties from the buid.properties file and makes them all available
+				to the rest of the Maven build process.
 			-->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -245,7 +236,7 @@
 					<execution>
 						<goals>
 							<goal>integration-test</goal>
-							<goal>verify</goal> 
+							<goal>verify</goal>
 						</goals>
 					</execution>
 				</executions>
@@ -878,7 +869,7 @@
 			<version>2.2.2</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jetty-embedded</artifactId>
@@ -1070,7 +1061,7 @@
 			<artifactId>commons-math3</artifactId>
 			<version>3.2</version>
 		</dependency>
-		
+
 		<!-- <dependency>
 			<groupId>javaml</groupId>
 			<artifactId>javaml</artifactId>
@@ -1214,6 +1205,15 @@
 			</snapshots>
 		</repository>
 	</repositories>
+
+    <modules>
+        <module>code/com</module>
+        <module>code/core</module>
+        <module>code/war</module>
+        <module>code/libs</module>
+        <module>code/tool</module>
+        <!-- <module>code/site</module> -->
+    </modules>
 
 	<pluginRepositories>
 		<pluginRepository>
