Fine tuning the general operations.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1854 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -1,5 +1,5 @@
 # Root Logger
-log4j.rootLogger=INFO, console, file
+log4j.rootLogger=DEBUG, console, file
 log4j.rootCategory=INFO, console
 
 # ikube application file logging
@@ -10,8 +10,8 @@ log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
 log4j.appender.file.Append=false
 log4j.appender.file.ImmediateFlush=true
-log4j.appender.file.MaxFileSize=1000MB
-log4j.appender.file.MaxBackupIndex=5
+log4j.appender.file.MaxFileSize=250MB
+log4j.appender.file.MaxBackupIndex=4
 
 # ikube application console logging
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -23,27 +23,7 @@ log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%
 # set the categories
 log4j.category.net=WARN
 log4j.category.com=WARN
-log4j.category.com.atomikos.diagnostics=WARN
-# log4j.category.org=WARN
-log4j.category.org.springframework=WARN
-log4j.category.net.htmlparser=WARN
-# log4j.category.org.apache.catalina=FATAL
-log4j.category.com.ibm=WARN
-# log4j.category.org.apache=WARN
-
-log4j.category.org.apache.jcs=INFO
-log4j.category.org.apache.jcs.auxiliary.remote=DEBUG
-log4j.category.org.apache.jcs.auxiliary.lateral=DEBUG
-
-log4j.category.bitronix.tm.twopc=ERROR
+log4j.category.org=WARN
 
 log4j.category.ikube=INFO
-log4j.category.ikube.toolkit=INFO
-log4j.category.ikube.action.rule=INFO
-log4j.category.ikube.action.index.handler.filesystem=INFO
-
-log4j.category.com.ikokoon.serenity=WARN
-log4j.category.com.ikokoon.toolkit=WARN
-log4j.category.com.ikokoon.serenity.persistence=WARN
-log4j.category.com.ikokoon.serenity.process=WARN
-log4j.category.com.ikokoon.serenity.persistence=WARN
+log4j.category.ikube.action.rule=DEBUG
