Finishing the analytics wrappers.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1862 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -26,4 +26,4 @@ log4j.category.com=WARN
 log4j.category.org=WARN
 
 log4j.category.ikube=INFO
-log4j.category.ikube.analytics=DEBUG
+log4j.category.ikube.analytics=INFO
