--- a/pom.xml
+++ b/pom.xml
@@ -217,7 +217,7 @@
 				<configuration>
 					<forkMode>once</forkMode>
 					<!-- Equivalent to -fae on the command line aparently. -->
-					<testFailureIgnore>false</testFailureIgnore>
+					<testFailureIgnore>true</testFailureIgnore>
 					<excludes>
 						<exclude>**/*Integration*.java</exclude>
 					</excludes>
