--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -53,7 +53,7 @@ internet.excluded.pattern=.*(/search).*|.*(r=).*|.*(terminate).*|.*(startup).*|.
 language.word.lists.directory=./ikube/common/languages
 language.word.lists.directory.index=./ikube/common/languages/index
 
-searcher.web.service.url=http://81.95.118.139/ikube/service/search/multi/spatial
+searcher.web.service.url=http://ikube.be/ikube/service/search/json
 
 # The start and end tier of the geohash
 max.geohash.levels=11
