--- a/pom.xml
+++ b/pom.xml
@@ -1210,8 +1210,8 @@
         <module>code/com</module>
         <module>code/core</module>
         <module>code/war</module>
-        <!--<module>code/libs</module>
-        <module>code/tool</module>-->
+        <module>code/libs</module>
+        <!-- <module>code/tool</module>-->
         <!-- <module>code/site</module> -->
     </modules>
 
