--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -19,7 +19,7 @@
     </parent>
 
     <properties>
-        <phase>install</phase>
+        <phase>deploy</phase>
         <packaging>jar</packaging>
         <generate-pom>true</generate-pom>
         <repository-id>ikube</repository-id>
@@ -34,7 +34,7 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.7</version>
                 <executions>
-                    <!--<execution>
+                    <execution>
                         <id>install-db2-driver</id>
                         <goals>
                             <goal>deploy-file</goal>
@@ -391,7 +391,7 @@
                             <repositoryId>${repository-id}</repositoryId>
                             <url>${artifactory}</url>
                         </configuration>
-                    </execution>-->
+                    </execution>
                     <execution>
                         <id>install-cluster-gvm</id>
                         <goals>
