--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -1,27 +1,11 @@
 ikube-war=ikube.war
-ikube-configuration-jar=configuration.jar
 
-sleep=30
+project-directory=
+resources-directory=libs/src/main/resources
 
-target-directory=code/war/target
-resources-directory=code/libs/src/main/resources
-configuration-directory=${resources-directory}/ikube
+tomcat-one=/home/apache-tomcat-7.0.42
+tomcat-one-bin=${tomcat-one}/bin
+tomcat-one-webapps=${tomcat-one}/webapps
 
-base-dir=/home/
-
-tomcat-one=apache-tomcat-6.0.29-1
-tomcat-two=apache-tomcat-6.0.29-2
-tomcat-three=apache-tomcat-6.0.29-3
-
-tomcat-one-home=${base-dir}${tomcat-one}
-tomcat-two-home=${base-dir}${tomcat-two}
-tomcat-three-home=${base-dir}${tomcat-three}
-
-tomcat-one-bin=${tomcat-one-home}/bin
-tomcat-one-webapps=${tomcat-one-home}/webapps
-
-tomcat-two-bin=${}tomcat-two-home/bin
-tomcat-two-webapps=${tomcat-two-home}/webapps
-
-tomcat-three-bin=${tomcat-three-home}/bin
-tomcat-three-webapps=${tomcat-three-home}/webapps
+username=root
+password=Caherl1ne2013
