--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -95,7 +95,7 @@
 					</connectors>
 				</configuration>
 				<executions>
-					<execution>
+					<!--<execution>
 						<id>start-jetty</id>
 						<phase>pre-integration-test</phase>
 						<goals>
@@ -111,7 +111,7 @@
 						<goals>
 							<goal>stop</goal>
 						</goals>
-					</execution>
+					</execution>-->
 				</executions>
 				<dependencies>
 					<dependency>
