--- a/code/com/pom.xml
+++ b/code/com/pom.xml
@@ -65,7 +65,7 @@
                                 <delete dir="../../ikube/analytics" />
                                 <delete dir="../war/ikube/twitter" />-->
 
-                                <copy todir="ikube" failonerror="true" verbose="false">
+                                <!--<copy todir="ikube" failonerror="true" verbose="false">
                                     <fileset dir="../libs/src/main/resources/ikube"/>
                                 </copy>
                                 <copy todir="../core/ikube" failonerror="true" verbose="false">
@@ -120,7 +120,7 @@
 
                                 <copy todir="../war/ikube/twitter" failonerror="true" verbose="true">
                                     <fileset dir="../libs/src/main/resources/indexes/twitter"/>
-                                </copy>
+                                </copy>-->
                             </target>
                         </configuration>
                         <goals>
