--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -27,3 +27,6 @@ log4j.category.org=WARN
 
 log4j.category.ikube=INFO
 log4j.category.ikube.analytics=INFO
+
+log4j.category.ikube.analytics.weka=DEBUG
+log4j.category.ikube.action.index.handler.strategy=DEBUG
