--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -6,3 +6,6 @@ resources-directory=libs/src/main/resources
 tomcat-one=/home/apache-tomcat-7.0.42
 tomcat-one-bin=${tomcat-one}/bin
 tomcat-one-webapps=${tomcat-one}/webapps
+
+username=username
+password=password
