--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 
 		<write.classes>-Dwrite.classes=true</write.classes>
 		<clean.classes>-Dclean.classes=true</clean.classes>
-		<included.packages>-Dincluded.packages=ikube</included.packages>
+		<included.packages>-Dincluded.packages=ikube:edu.uci</included.packages>
 		<excluded.packages>-Dexcluded.packages=model:Mock:Test:Integration:sshxcute</excluded.packages>
 		<included.adapters>-Dincluded.adapters=coverage:complexity:dependency</included.adapters>
 		<serenity.parameters>${included.adapters} ${included.packages} ${excluded.packages} ${write.classes} ${clean.classes}</serenity.parameters>
@@ -1138,10 +1138,17 @@
             <type>jar</type>
             <scope>compile</scope>
 		</dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>edu.uci.ics</groupId>
             <artifactId>crawler4j</artifactId>
             <version>3.5</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>-->
+        <dependency>
+            <groupId>niocchi</groupId>
+            <artifactId>niocchi</artifactId>
+            <version>1.1</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
