Fixed some of the gui logic and the clustering and distribution of tasks into the cluster.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1920 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -62,7 +62,7 @@ max.geohash.levels=11
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=300000
+delay=15000
 # The period between notifications for timed tasks
 period=60000
 
@@ -107,7 +107,7 @@ db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
 oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 postgres.jdbc.driver=org.postgresql.Driver
 
-# H2 database, this is for distribution and production. This 
+# H2 database, this is for distribution and production. This
 # database is what ikube will use in the field
 ikube.dataSource=nonXaDataSourceH2
 ikube.persistenceUnit=IkubePersistenceUnitH2
@@ -153,3 +153,34 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaH2
 #ikube.jdbc.driver=${postgres.jdbc.driver}
 #ikube.jdbc.dictionary=postgres(batchLimit=1000)
 #ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaPostgres
+
+# Grid properties
+hz-instance-name=ikube
+hz-group-name=ikube
+hz-group-password=ikube
+hz-management-center-enabled=false
+hz-management-center-url=http://localhost:8080/hazelcast
+hz-network-port=8020
+hz-network-port-auto-increment=true
+hz-multicast-enabled=true
+hz-multicast-group=224.1.2.3
+
+
+hz-tcp-ip-enabled=false
+hz-interfaces-enabled=true
+hz-tcp-ip-interface=192.168.1.*
+hz-search-map=search
+hz-map-backup-count=3
+hz-map-max-size=1000
+hz-map-eviction-percentage=25
+hz-map-read-backup-data=false
+hz-map-eviction-policy=LFU
+hz-map-merge-policy=hz-ADD_NEW_ENTRY
+
+hz-async-backup-count=3
+hz-max-idle-seconds=60
+#hz-statistics-enabled=true
+hz-time-to-live-seconds=60
+
+hz-map-store-enabled=true
+hz-map-store-write-delay=3
