--- a/code/tool/src/main/resources/ikube/spring.properties
+++ b/code/tool/src/main/resources/ikube/spring.properties
@@ -3,6 +3,18 @@ ikube-war=ikube.war
 project-directory=
 resources-directory=code/libs/src/main/resources
 
-tomcat-one=/home/apache-tomcat-7.0.42
+tomcat=/home/apache-tomcat-7.0.42
+tomcat-bin=${tomcat}/bin
+tomcat-webapps=${tomcat}/webapps
+
+tomcat-one=/home/apache-tomcat-6.0.29-1
 tomcat-one-bin=${tomcat-one}/bin
 tomcat-one-webapps=${tomcat-one}/webapps
+
+tomcat-two=/home/apache-tomcat-6.0.29-2
+tomcat-two-bin=${tomcat-two}/bin
+tomcat-two-webapps=${tomcat-two}/webapps
+
+tomcat-three=/home/apache-tomcat-6.0.29-3
+tomcat-three-bin=${tomcat-three}/bin
+tomcat-three-webapps=${tomcat-three}/webapps
