Fixed some of the gui logic and the clustering and distribution of tasks into the cluster.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1923 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -1245,7 +1245,7 @@
         <module>code/com</module>
         <module>code/core</module>
         <module>code/war</module>
-        <module>code/tool</module>
+        <!--<module>code/tool</module>-->
         <!--<module>code/libs</module>-->
         <!--<module>code/site</module>-->
     </modules>
